my-nginx-with-ssl/nginx1-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-svc
  namespace: test-nginx
  labels:
    app: test-nginx-app
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  selector:
    app: test-nginx-app
